# macvendorscli

./: README.md  build.sh  main.py  pyproject.toml
macvendorscli/: __init__.py  __main__.py  cli.py  exceptions.py  version.py
scripts/: update_oui.py
